--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Michael Server</title>
+    <title>RPG Server</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <script src="bundle.js" charset="UTF-8"></script>
 </head>
 <body>
-  <p>Hello World</p>
+  <p>Cliente RPG</p>
   <div id="Phaser-game"></div>
 </body>
